syntax = "proto3";

package go.micro.api.cartApi;

import "github.com/micro/go-micro/api/proto/api.proto";

service CartApi {
	rpc Call(go.api.Request) returns (go.api.Response) {}
}
